# SDRPlusPlus

./: CMakeLists.txt  make_macos_bundle.sh  make_windows_package.ps1
core/src/: core.cpp
source_modules/fobosagilesdr_source/: CMakeLists.txt
source_modules/fobosagilesdr_source/src/: fobos_sdr.c  fobos_sdr.h  main.cpp
